# stpl

./: .cproject  .gitignore  AUTHORS  Makefile.am  README.md  configure  configure.ac
spec/: default.h  property.h  text.h
stpl/: stpl_atom.h  stpl_doc.h  stpl_entity.h  stpl_exception.h  stpl_grammar.h  stpl_keyword.h  stpl_log.h  stpl_othertraits.h  stpl_parser.h  stpl_property.h  stpl_rule.h  stpl_scanner.h  stpl_simple.h  stpl_stream.h  stpl_typetraits.h  stpl_unichar.h  stpl_unigrammar.h  stpl_uniword.h  stpl_word.h
stpl/html/: stpl_html.h  stpl_html_entity.h
stpl/lang/: stpl_character.h  stpl_chinese.h  stpl_unicode.h  stpl_uscanner.h
stpl/misc/: stpl_trec.h
stpl/wiki/: stpl_wiki_basic.h  stpl_wiki_constants.h  stpl_wiki_doc.h  stpl_wiki_entity.h  stpl_wiki_parser.h  wiki_wiki_entity.h  wiki_wiki_parser.h
stpl/xml/: stpl_xml.h  stpl_xml_basic.h  stpl_xml_entity.h
test/: Makefile  Makefile.in  test_attr  test_attr.cpp  test_filestream  test_fs  test_html  test_html.cpp  test_html_attr  test_html_attr.cpp  test_text  test_text.cpp  test_trec  test_trec.cpp  test_unicode  test_unicode.cpp  test_unidoc  test_unidoc.cpp  test_xml  test_xml.cpp
test/.deps/: test_attr.Po  test_filestream.Po  test_fs.Po  test_html.Po  test_html_attr.Po  test_text.Po  test_trec.Po  test_unicode.Po  test_unidoc.Po  test_xml.Po
tools/: Makefile.am  stpl-xml.cpp  stpl.cpp
utils/: archive.h  fs.h  strings.h  xml.h
